--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
  	
 	<body>
 		<h1> Hola ch38, este es mi primer deploy </h1>
+		<p>hoy fue dia de sombreros</p>
+		<h2> esta interesante esta clase  </h2>
 	</body>
 
 
