--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<html>
-	<head>
-		
-			<title> CH38 </title>
-	
-	</head>
- 	
-	<body>
-		<h1> Hola ch38, este es mi primer deploy </h1>
-		<p>hoy fue dia de sombreros</p>
-		<h2> esta interesante esta clase  </h2>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+
+<body>
+	<main>
+		<h1>CH 38 </h1>
+		<p>sesiones de la ch 38 Mx</p>
+		<button> haz Click aqui</button>
+	</main>
+
+</body>
 
 </html>
