--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<main>
 		<h1>CH 38 </h1>
 		<p>sesiones de la ch 38 Mx</p>
-		<button> haz Click aqui</button>
+<p> este es un nuevo parrafo</p>
+		
+<button> haz Click aqui</button>
 	</main>
 
 </body>
