--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 		<h1>CH 38 </h1>
 		<p>sesiones de la ch 38 Mx</p>
 <p> este es un nuevo parrafo</p>
-		
-<button> haz Click aqui</button>
-	</main>
+		<hr> 
 
+<button onclick="mostrarAlerta()"> picale aqui</button>
+<button onclick="enviarSaludo()">dime tu nombre</button>
+	</main>
+<script src="script.js"></script>
 </body>
 
 </html>
